Edited knowledge base, and tried somethign with the font-sizes to be better on IOS Font size fix did not work, so I tried a new fix. Also translated the why me section. Added a couple of pictures to the timeline.

--- a/CSS-Files/Alleen-CV.css
+++ b/CSS-Files/Alleen-CV.css
@@ -49,7 +49,7 @@ Email: 12202625@student.pxl.be
     margin: 5vh 10vw;
     min-width: 12rem;
     max-width: 80vw;
-    transition: all 200ms ease-in-out;
+    /*transition: all 200ms ease-in-out;*/
 }
 
 div {
@@ -62,14 +62,14 @@ div {
     min-height: 18rem;
     overflow-y: hidden;
     min-width: 25rem;
-    animation: spring-from-left 2000ms;
-    transition: all 500ms ease-out;
+    /*animation: spring-from-left 2000ms;*/
+    /*transition: all 500ms ease-out;*/
 }
 
 .flex-container .hogerartiekel {
     max-height: 80rem;
     min-height: 18rem;
-    transition: all 1000ms ease-out;
+    /*transition: all 1000ms ease-out;*/
     /*animation: fit_content 1000ms forwards;*/
 }
 
@@ -285,6 +285,7 @@ article.groot.hogerartiekel:has(.experience-img-grid) {
     --skill-color:#3f6251;
     justify-content: center;
     gap: 2rem;
+    color: white;
     .bwa{
         --skill-color: #5d2525;
     }
@@ -299,6 +300,9 @@ article.groot.hogerartiekel:has(.experience-img-grid) {
         outline: var(--outline-color) 1px solid;
     }
 }
+article.groot.greenbackground.comeleft.hogerartiekel:hover {
+    flex: 3;
+}
 .why-choose-me-item.why-choose-me-item{
     flex: 1 1 25rem;
     outline: 2px solid;
@@ -310,6 +314,7 @@ article.groot.hogerartiekel:has(.experience-img-grid) {
         position: absolute;
         opacity: 0;
         inset: 0;
+        z-index: -1;
         outline: 2px white solid;
         border-radius: inherit;
         filter: blur(3px);
@@ -1058,6 +1063,7 @@ tr:nth-child(odd) {
 @media screen and (max-width: 600px) {
     body{
         font-size:1rem;
+        -webkit-text-size-adjust: none;
     }
     .showsmall {
         flex-direction: column;
